docs/grammar.ebnf
(* mmCal 1.5.2 現行構文。意味判定と名前解決はLowerer / Evaluatorへ分離する。 *)

digit          ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
letter         ::= "A" | ... | "Z" | "a" | ... | "z" ;
identifier     ::= ( letter | "_" ) , { letter | digit | "_" } ;

integer        ::= digit , { digit } ;
decimal        ::= digit , { digit } , [ "." , { digit } ]
                 | "." , digit , { digit } ;
exponent       ::= ( "e" | "E" ) , [ "+" | "-" ] , digit , { digit } ;
number         ::= decimal , [ exponent ]
                 | ( "0b" | "0B" ) , binary_digit , { binary_digit }
                 | ( "0o" | "0O" ) , octal_digit , { octal_digit }
                 | ( "0x" | "0X" ) , hex_digit , { hex_digit }
                 | integer , "#" , radix_digit , { radix_digit } ,
                   [ "." , radix_digit , { radix_digit } ] ;

binary_digit   ::= "0" | "1" ;
octal_digit    ::= "0" | ... | "7" ;
hex_digit      ::= digit | "A" | ... | "F" | "a" | ... | "f" ;
radix_digit    ::= digit | letter ;

string         ::= '"' , { ? escapeを含む文字 ? } , '"' ;
assign         ::= ":=" ;
rule           ::= "->" ;

Input          ::= Assignment ;
Assignment     ::= RuleExpr , [ assign , Assignment ] ;
RuleExpr       ::= Compare , [ rule , RuleExpr ] ;
Compare        ::= Expression , { CompareOp , Expression } ;
CompareOp      ::= "<" | "<=" | ">" | ">=" | "==" | "!=" ;
Expression     ::= Term , { ( "+" | "-" ) , Term } ;
Term           ::= Unary , { ( "*" | "/" | ImplicitMul ) , Unary } ;
Unary          ::= { "+" | "-" } , Power ;
Power          ::= Postfix , [ "^" , Unary ] ;
Postfix        ::= Primary , { "!" } ;

Primary        ::= number
                 | string
                 | HistoryRef
                 | ArrayLiteral
                 | CasesExpr
                 | IdentifierExpr
                 | Group ;

HistoryRef     ::= "%" , { "%" } | "@" , { "@" } ;
ArrayLiteral   ::= "{" , [ Assignment , { "," , Assignment } ] , "}" ;
IdentifierExpr ::= identifier , [ CallSuffix ] ;
CallSuffix     ::= "[" , [ Assignment , { "," , Assignment } ] , "]" ;
CasesExpr      ::= "cases" , "[" , CaseBranch , { ";" , CaseBranch } , "]" ;
CaseBranch     ::= Assignment , "if" , Assignment
                 | Assignment ;
Group          ::= "(" , Assignment , ")" ;
ImplicitMul    ::= (* 隣接規則によりParserが生成する。 *) ;

(* 函数呼び出しは name[...] のみ。丸括弧はgrouping専用とする。 *)
(* 通常identifierに続く (expr) はImplicitMulとして扱い、Formatterは x*(expr) と明示する。 *)
(* 既知の函数名に旧 name(expr) 構文を使った場合は、乗算へ黙って変えずSyntaxErrorとする。 *)
(* 角括弧は函数呼び出し専用であり、グループ化には使わない。 *)
(* 波括弧は配列専用とする。 *)
(* Iだけを虚数単位として扱い、iは通常の識別子とする。 *)
(* True / False はLowererでBooleanへ変換する。 *)
(* -> はRule[lhs,rhs]へloweringする一般演算子で，option専用構文ではない。 *)
(* option名はidentifierのまま扱い，Lexer keywordを追加しない。 *)
(* 未定義identifierと未登録函数はEvaluatorでNameErrorとする。 *)
(* 0x / 0b / 0oを読み始めた後は識別子や暗黙乗算へ後戻りしない。 *)
(* decimal直後のe/Eは、後続に符号付き/符号なしの数字がある場合だけ指数部とする。 *)
(* したがって2exp[x]や2E^xはNumberとIdentifierに分離され、暗黙乗算として扱う。 *)

(* 優先順位例：-5! は -(5!) と解釈する。 *)
(* 負整数そのものの階乗は (-5)! と書かれ、DomainErrorとなる。 *)

(* ユーザー定義函数の意味規則 *)

(* 函数定義は遅延代入を使用する。 *)
(*   f[x] := x + 1 *)
(* 仮引数は重複しないidentifierでなければならず、定数名は使用できない。 *)
(* 定義は函数名と引数個数の組で区別する。 *)
(* 呼出し時は実引数を先に評価し、局所スコープへ仮引数として束縛した後、 *)
(* 保存済みの函数本体を評価する。 *)
(* ifは選択した枝だけを評価するため、停止条件を持つ再帰函数を記述できる。 *)
(* casesは数学的な場合分け式であり，枝区切りに`;`を使う。 *)
(* 無条件branchは最後のdefaultだけに許可し，少なくとも1つの`value if condition`を要求する。 *)
